--- a/config.yaml
+++ b/config.yaml
@@ -1,22 +1,21 @@
 baseURL: https://palak-awasthi.netlify.app
 languageCode: en-us
-title: Palak
+title: Welcome to my website
 theme: forty
 googleAnalytics: ''
 disqusShortname: ''
 params:
   banner:
-    buttonText: Get Started
+    buttonText: Here you go
     subtitle: |-
-      A RESPONSIVE SITE TEMPLATE DESIGNED BY HTML5 UP
-      AND RELEASED UNDER THE CREATIVE COMMONS.
-    title: Hi, my name is Palak
+      Wanna Know more about my work?
+    title: Hi, my name is Palak. Thanks for visiting my website.
   blog: {}
   contact:
     address:
       - city: London
         country: UK
-        street: Regent's Park
+        street: Gloucester Pl
         title: Address
     buttonClear: Clear
     buttonSend: Send message
@@ -25,8 +24,8 @@ params:
         title: Email
     enable: yes
     phone:
-      - phone: (000) 000-0000 x1234
-        title: Phone
+      - phone: +44 7879974461
+        title: Contact
   custom_css: []
   custom_js: []
   description: Your description
@@ -35,22 +34,22 @@ params:
     text: Please visit [this page](/)
   favicon: favicon.ico
   footer:
-    copyright: Company Name
+    copyright: Made by- ME:)
     enable: yes
     quicklinks:
-      - alt: HTML5 UP
-        text: 'Design: '
-        url: https://www.html5up.net
+      - alt: London Business School
+        text: ''
+        url: https://www.london.edu
     social:
       - icon: fa-twitter
         label: Twitter
-        url: https://www.twitter.com
-      - icon: fa-facebook
-        label: Facebook
-        url: https://www.facebook.com
+        url: https://twitter.com/paaalakpaneer
+      #- icon: fa-facebook
+       # label: Facebook
+       # url: https://www.facebook.com
       - icon: fa-instagram
         label: Instagram
-        url: https://www.instagram.com
+        url: https://www.instagram.com/palakawasthii/
       - icon: fa-github
         label: GitHub
         url: https://github.com/palak7034
@@ -63,56 +62,51 @@ params:
     button1:
       - name: Get Started
         url: blogs
-    button2:
-      - name: Log In
-        url: '#'
+    #button2:
+    #  - name: Log In
+     #   url: '#'
     links:
       - name: Home
         url: '#'
-      - name: Blogs
-        url: blogs
-      - name: Generic Blog
-        url: blogs/ipsum
-      - name: Elements
-        url: elements.html
+     # - name: Blogs
+    #    url: blogs
+     # - name: Generic Blog
+    #    url: blogs/ipsum
+    #  - name: Elements
+     #   url: elements.html
     menu: Menu
-    subtitle: By HTML5 Up
-    title: Forty
+    subtitle: 
+    title: Palak's portfolio Website
   tiles:
     enable: yes
     showcase:
-      - image: pic01.jpg
-        subtitle: Ipsum Dolor Sit Amet
-        title: Aliquam
+      - image: Aboutme.jpeg
+        subtitle: 
+        title: About me
         url: blogs/aliquam
-      - image: pic02.jpg
-        subtitle: Feugiat Amet Tempus
-        title: Tempus
+      - image: Santander_bike.jpg
+        subtitle: 
+        title: Case study on Santander bikes
         url: blogs/tempus
-      - image: pic03.jpg
-        subtitle: Lorem Etiam Nullam
-        title: Magna
+      - image: workout_pic.png
+        subtitle: 
+        title: Youth Risk Behavior Surveillance
         url: blogs/magna
-      - image: pic04.jpg
-        subtitle: Nisl Sed Aliquam
-        title: Ipsum
+      - image: omega-plc.jpeg
+        subtitle: Case Study of Omega plc to see if the pay gap is due to descrimination
+        title: Pay Discrimination
         url: blogs/ipsum
-      - image: pic05.jpg
-        subtitle: Ipsum Dolor Sit Amet
-        title: Consequat
-        url: blogs/ipsum
-      - image: pic06.jpg
-        subtitle: Feugiat Amet Tempus
-        title: Etiam
-        url: blogs/ipsum
+      #- image: pic05.jpg
+        #subtitle: Ipsum Dolor Sit Amet
+        #title: Consequat
+        #url: blogs/ipsum
+      #- image: pic06.jpg
+        #subtitle: Feugiat Amet Tempus
+        #title: Etiam
+        #url: blogs/ipsum
   two:
-    buttonText: Get Started
+    buttonText: here you go 
     enable: yes
-    subtitle: "Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero.
-      \n    Mauris aliquet magna magna sed nunc rhoncus pharetra. \n    Pellentesque
-      condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia
-      pellentesque lorem ipsum dolor. \n    Nullam et orci eu lorem consequat tincidunt.
-      Vivamus et sagittis libero.\n    Mauris aliquet magna magna sed nunc rhoncus
-      amet pharetra et feugiat tempus."
-    title: Massa libero
+    subtitle: ""
+    title: Wanna explore the full site?
     url: blogs
